--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body class="bg-black">
+<body class="bg-dark bg-gradient vh-100 vw-100">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-truck m-2" viewBox="0 0 16 16">
@@ -32,7 +32,7 @@
       </nav>
       <main class="m-5">
         
-        <table class="table border border-secondary rounded">
+        <table class="table border border border-secondary rounded-5">
             <thead>
               <tr>
                 <th scope="col">#</th>
